# ankur287.github.io

./: french-week1 (2).html  french-week1.html
French_Course/: AGENTS.md  assessment_framework.md  content_generation_workflow.md  curriculum_master.md  grammar_map.md  index.html  learner_state.md  qa_checklist.md  review_rules.md  story_world.md  vocabulary_bank.csv  website_structure.md  week-01-summary.md  week-02-summary.md  week-03-summary.md  week-04-summary.md  week-05-summary.md  week-06-summary.md  week-07-summary.md  week-08-summary.md  week-09-summary.md  week-10-summary.md  week-11-summary.md  week-12-summary.md  week-13-summary.md  week-14-summary.md  week-15-summary.md  week-16-summary.md  week-17-summary.md  week-18-summary.md  week-19-summary.md  week-20-summary.md  week-21-summary.md  week-22-summary.md  week-23-summary.md  week-24-summary.md  week-25-summary.md  week-26-summary.md  week-27-summary.md  week-28-summary.md  (+3 more)
French_Course/Week_1/: audio.js  grammar.html  index.html  listening.html  quiz.html  reading.html  styles.css  vocabulary.html  writing.html
French_Course/Week_10/: grammar.html  index.html  listening.html  quiz.html  reading.html  vocabulary.html  writing.html
French_Learning/: README.md
StorybookGenerator/: .gitignore  CLAUDE.md  README.md  pyproject.toml
StorybookGenerator/src/storybook_generator/: __init__.py  app.py  html_assembler.py  library.py  ollama_manager.py  project_requirement.md  safety_checker.py  story_generator.py
StorybookGenerator/src/storybook_generator/templates/: create.html  home.html
(+225 files in other folders)
